<resources>
    <string name="app_name">Splash</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="demo">demo</string>
    <string name="chatt">Chatt</string>
    <string name="simple_mobile_chat">Simple mobile chat and notes.</string>
    <string name="not_a_member_yet">Not a member? Sign up now.</string>
    <string name="provider_authority">com.ojiofong.splash.provider</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="server_down">Server is down. Please try again</string>
    <string name="no_data_returned">No data returned</string>
    <string name="server_invalid">Server returned an invalid data</string>
</resources>
