<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="@dimen/max_width_layout"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/view_space_1"
            android:background="@android:color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingEnd="@dimen/view_space_1"
            android:paddingStart="@dimen/view_space_1"
            android:text="@string/demo" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/view_space_1"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/view_space_1"
            android:paddingStart="@dimen/view_space_1"
            android:text="@string/demo" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/view_space_2"
            android:contentDescription="@string/login"
            android:onClick="onClickLogin"
            android:text="@string/login" />


        <TextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space_3"
            android:gravity="center"
            android:text="@string/not_a_member_yet"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>